--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -53,7 +53,13 @@
 
 \makeindex
 
+\title{Oceanography Graduate Handbook}
+\date{September, 2016}
+
 \begin{document}
+\maketitle
+\newpage
+\tableofcontents
 
 % A.	GENERAL  PROGRAM REQUIREMENTS
 \section{\label{sec:general_program_requirements}General Program Requirements}
@@ -232,13 +238,13 @@ circumstances.
 \subsection{Seminars}
 
 Students are required to attend the general \di{departmental
-seminars}\index{seminars!departmental} and to attend, and participate in, the
-specialty seminars in their field of interest.  Students who are unable to
-attend seminars regularly must have the specific agreement of their \advcom
-that this requirement is waived and this must be communicated to the
-departmental office in a written memo signed by the supervisor. It is important
-to note that materials presented in these seminars may form part of the
-questions for the PhD Qualifying Exam and the PhD Thesis Proposal Defence.
+seminars}\index{seminars} and to attend, and participate in, the specialty
+seminars in their field of interest.  Students who are unable to attend
+seminars regularly must have the specific agreement of their \advcom that this
+requirement is waived and this must be communicated to the departmental office
+in a written memo signed by the supervisor. It is important to note that
+materials presented in these seminars may form part of the questions for the
+PhD Qualifying Exam and the PhD Thesis Proposal Defence.
 
 
 
@@ -479,14 +485,14 @@ schedules.
  
 The examination for the degree of Master of Science is subject to detailed
 regulations of the Faculty of Graduate Studies\footnote{FGS Regulations,
-section 10.3: Master's Theses \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10853&loaduseredits=False}{\ExternalLink}.}
+section 10.3: Master's Theses \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10853&loaduseredits=False}{\ExternalLink}.}.
 
 The MSc thesis should report original research of such value as to merit
 publication and be in a satisfactory and consistent literary form. Faculty of
 Graduate Studies thesis formatting requirements are available on their
 website\footnote{FGS Regulations, section 10.2: Preparation of Manuscript and
 Submission of Theses
-\href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=2&chapterid=399&topicgroupid=1435&loaduseredits=False}{\ExternalLink}.}
+\href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=2&chapterid=399&topicgroupid=1435&loaduseredits=False}{\ExternalLink}.}.
 
 The oral defence of the thesis is open to all members of the department and to
 other interested persons. Notices of the thesis defence, including an abstract,
@@ -701,7 +707,7 @@ The normal course requirements for a PhD in Geological Oceanography are:
 \end{itemize}
 
 %C1.4	PHYSICAL OCEANOGRAPHY GUIDELINES
-\paragraph{Physical Oceanography guidelines}
+\subsubsection{Physical Oceanography guidelines}
 
 The normal course requirements for a PhD in Physical Oceanography are:
 
