--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{fullpage}
 %\usepackage{mathptmx}
 \usepackage{times}
@@ -9,23 +9,40 @@
 \usepackage{makeidx}
 \usepackage{enumitem}
 \usepackage{graphicx}
+\usepackage[normalem]{ulem}
+
 \usepackage[plainpages=false,debug]{hyperref} % should be last package
 
 \setlist{nosep} % tighten itemized lists
 
-\newcommand\elink[1]{\url{#1}}
+\definecolor{diColor}{rgb}{0,0,0.8}
+\definecolor{deleteColor}{rgb}{1,0,0}
+\definecolor{addColor}{rgb}{0.0,0.5,0}
 
-\definecolor{diColor}{rgb}{0,0,0.8} % hide them as black
 \definecolor{fixmeColor}{rgb}{0.8,0,0} % hide them as black
+
+\newcommand\delete[1]{\color{deleteColor}\sout{\textbf{#1}}\color{black}\xspace%
+\marginpar{\color{deleteColor}$\Delta$\color{black}}}
+
+\newcommand\add[1]{\color{addColor}\textbf{#1}\color{black}\xspace%
+\marginpar{\color{addColor}$\Delta$\color{black}}}
+
+%\newcommand\edited{\marginpar{\color{red}$\Delta$\color{black}}}
+
 
 \newcommand{\di}[2][EMPTY]{\ifthenelse{\equal{#1}{EMPTY}}{\color{diColor}#2\color{black}\index{#2}}{\color{diColor}#2\color{black}\index{#1}}}
 \newcommand{\fixme}[1]{\color{fixmeColor}$<$#1$>$\color{black}\index{$>>>>$FIXME$<<<<$}}
+
+\newcommand{\npara}[1]{\noindent\textbf{\thesubsection.#1}} % for numbered paragraphs of appeals section
+
 
 \newcommand{\curcom}{\index{Committees!Curriculum}\color{diColor}Curriculum Committee\color{black}\xspace}
 
 \newcommand{\advcom}{\index{Committees!Advisory}\color{diColor}Advisory Committee\color{black}\xspace}
 
 \newcommand{\goc}{\index{Committees!Graduate Oversight}\color{diColor}Graduate Oversight Committee\color{black}\xspace}
+
+\setlength{\parskip}{0.5ex plus 0.5ex minus 0.25ex}
 
 \usepackage{tikz}
 
@@ -1232,6 +1249,8 @@ course, or material for a thesis, students should read the Policy on Integrity
 in Scholarly Activity\footnote{FGS Regulations, section 6.3: Policy on
 Integrity in Scholarly
 Activity \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849&loaduseredits=False}{\ExternalLink}.}.
+
+\include{appeals}
 
 \printindex
 
