--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -709,7 +709,7 @@ The normal course requirements for a PhD in Chemical Oceanography are:
 
 \begin{itemize}
 \item Core Classes: Chemical Oceanography (5130), Geological Oceanography (5110), Physical Oceanography (5120), and Biological Oceanography (5140)
-\item Advanced Chemical Oceanography (modular) (5290)
+\item Advanced Chemical Oceanography (modular) (5290)\fixme{5290 not offered since 2007/9}
 \item Other Classes, as required by the Advisory Committee
 \end{itemize}
 
